tests/compile_fail/invalid_max_states.c
#define MFSM_MAX_STATES 0
#include "mfsm.h"

int main(void)
{
    return 0;
}
